--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
 }
 
 version "0.1"
-group "helloworld"
+group "vanderfox"
 
 apply plugin: "spring-boot"
 apply plugin: "war"
@@ -42,6 +42,7 @@ repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
     maven { url  "http://dl.bintray.com/rvanderwerf/alexa-skills"}
+    maven { url "https://jitpack.io" }
 }
 
 dependencyManagement {
@@ -79,7 +80,7 @@ dependencies {
     compile 'org.grails.plugins:spring-security-core:3.0.4'
     compile "org.grails.plugins:spring-security-ui:3.0.0.M2"
     compile 'org.grails.plugins:spring-security-oauth2-provider:3.0.0-RC1'
-
+    compile 'com.github.Grover-c13:PokeGOAPI-Java:0.2'
 
 }
 
